Crash on master
Mutter crashes on master sometimes, bisected to commit eb14da38.
Reproducer:
-
disable the slice allocator by setting the
G_SLICE=always-malloc
env variable -
open the overview, type in "Term" to open a terminal and press the enter key.
-
maybe do 2) a second or a third time
Here's some backtraces:
One
#0 0x00007f2aabddb9e7 in cogl_framebuffer_get_instance_private (self=0x4c33f10) at ../../../../jhbuild/checkout/mutter/cogl/cogl/cogl-framebuffer.c:147
#1 _cogl_framebuffer_add_dependency (framebuffer=0x4c33f10, dependency=0x4c3e8b0) at ../../../../jhbuild/checkout/mutter/cogl/cogl/cogl-framebuffer.c:859
#2 0x00007f2aac0a38bc in _st_create_shadow_pipeline (shadow_spec=0x4c422c0, src_texture=0x11, resource_scale=1)
at ../../../../jhbuild/checkout/gnome-shell/src/st/st-private.c:407
#3 0x00007f2aac0a3ccf in _st_create_shadow_pipeline_from_actor (shadow_spec=0x4c3e970, actor=0x4b8b720)
at ../../../../jhbuild/checkout/gnome-shell/src/st/st-private.c:534
#4 0x00007f2aac0a22e4 in st_label_new (text=0x5000100060006 )
at ../../../../jhbuild/checkout/gnome-shell/src/st/st-label.c:336
#5 0x4210000042ce0000 in ?? ()
#6 0x0000000000000000 in ?? ()
Two
#0 0x00007f2b4c5b8fd7 in ?? () at ../../../../jhbuild/checkout/mutter/cogl/cogl/cogl-framebuffer.c:882
from /home/tester/jhbuild/install/lib/mutter-8/libmutter-cogl-8.so.0
#1 0x00007f2b4c5ae230 in cogl_texture_get_data (texture=0x45e1c30, format=COGL_PIXEL_FORMAT_A_8, rowstride=144, data=0x45e4780 "")
at ../../../../jhbuild/checkout/mutter/cogl/cogl/cogl-texture.c:840
#2 0x00007f2b4c8818ac in _st_create_shadow_pipeline (shadow_spec=shadow_spec@entry=0x4354520, src_texture=src_texture@entry=0x45e1c30,
resource_scale=resource_scale@entry=1) at ../../../../jhbuild/checkout/gnome-shell/src/st/st-private.c:404
#3 0x00007f2b4c881cac in _st_create_shadow_pipeline_from_actor (shadow_spec=0x4354520, actor=0x3158210)
at ../../../../jhbuild/checkout/gnome-shell/src/st/st-private.c:531
#4 0x00007f2b4c8802d4 in st_label_paint (actor=, paint_context=0x45c4f20) at ../../../../jhbuild/checkout/gnome-shell/src/st/st-label.c:224
#5 0x00007f2b4cd7e3ff in _clutter_effect_modify_paint_volume (effect=, volume=)
at ../../../../jhbuild/checkout/mutter/clutter/clutter/clutter-effect.c:290
#6 0x00007f2b4cd54a2e in clutter_actor_continue_paint (self=, paint_context=0x3b70b60)
at ../../../../jhbuild/checkout/mutter/clutter/clutter/clutter-actor.c:4012
#7 0x00007f2b4cd9ee8f in ?? () at ../../../../jhbuild/checkout/mutter/clutter/clutter/clutter-pan-action.c:622
from /home/tester/jhbuild/install/lib/mutter-8/libmutter-clutter-8.so.0
#8 0x00007fffd94c7480 in ?? ()
#9 0x0000000003157670 in ?? ()
#10 0x00000000031579a0 in ?? ()
#11 0x00000000045dc190 in ?? ()
#12 0x00000000045dc190 in ?? ()
#13 0x00000000031578b8 in ?? ()
#14 0x00007fffd94c75c0 in ?? ()
#15 0x00007f2b4cd5af4f in _clutter_actor_draw_paint_volume (node=0x45dc190, self=0x45c4f20) at ../../../../jhbuild/checkout/mutter/clutter/clutter/clutter-actor.c:3347
#16 clutter_actor_paint (self=0x45c4f20, paint_context=) at ../../../../jhbuild/checkout/mutter/clutter/clutter/clutter-actor.c:3935
Three
#0 0x00007f998cdbafc7 in _cogl_framebuffer_flush_journal (framebuffer=0x3000100060005) at ../../../../jhbuild/checkout/mutter/cogl/cogl/cogl-framebuffer.c:882
#1 0x00007f998cdb0220 in _cogl_texture_flush_journal_rendering (texture=0x5021240) at ../../../../jhbuild/checkout/mutter/cogl/cogl/cogl-texture.c:929
#2 cogl_texture_get_data (texture=0x5021240, format=COGL_PIXEL_FORMAT_A_8, rowstride=72, data=0x510ee70 "")
at ../../../../jhbuild/checkout/mutter/cogl/cogl/cogl-texture.c:834
#3 0x00007f998d0838bc in _st_create_shadow_pipeline (shadow_spec=0x50f9020, src_texture=0x5021240, resource_scale=1)
at ../../../../jhbuild/checkout/gnome-shell/src/st/st-private.c:407
#4 0x00007f998d083ccf in _st_create_shadow_pipeline_from_actor (shadow_spec=0x510cd50, actor=0x50d23c0)
at ../../../../jhbuild/checkout/gnome-shell/src/st/st-private.c:534
#5 0x00007f998d0822e4 in st_label_new (text=0x3000100060005 )
at ../../../../jhbuild/checkout/gnome-shell/src/st/st-label.c:336
#6 0x4210000042900000 in ?? ()
#7 0x0000000000000000 in ?? ()
cc @jadahl
Edited by Jonas Dreßler